[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/UI/PauseMenu/PauseMenu.gd" type="Script" id=1]
[ext_resource path="res://src/UI/Theme/Floating.tres" type="Theme" id=2]

[node name="PauseMenu" type="MarginContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 2 )
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
script = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="."]
margin_left = 8.0
margin_top = 8.0
margin_right = 472.0
margin_bottom = 262.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_top = 55.0
margin_right = 464.0
margin_bottom = 69.0
size_flags_horizontal = 3
size_flags_vertical = 6
text = "--Paused--"
align = 1
valign = 1

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer"]
margin_top = 129.0
margin_right = 464.0
margin_bottom = 254.0
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Return" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 204.0
margin_right = 259.0
margin_bottom = 20.0
size_flags_horizontal = 4
text = "Return"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 203.0
margin_top = 24.0
margin_right = 261.0
margin_bottom = 44.0
size_flags_horizontal = 4
text = "Options"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="KeyGuide" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 188.0
margin_top = 48.0
margin_right = 276.0
margin_bottom = 68.0
size_flags_horizontal = 4
text = "How To Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Level" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 187.0
margin_top = 72.0
margin_right = 276.0
margin_bottom = 92.0
size_flags_horizontal = 4
text = "Level Select"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Quit" type="Button" parent="VBoxContainer/VBoxContainer"]
margin_left = 212.0
margin_top = 96.0
margin_right = 251.0
margin_bottom = 116.0
size_flags_horizontal = 4
text = "Quit"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="VBoxContainer/VBoxContainer/Return" to="." method="_on_Return_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Options" to="." method="_on_Options_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/KeyGuide" to="." method="_on_KeyGuide_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Level" to="." method="_on_Level_pressed"]
[connection signal="pressed" from="VBoxContainer/VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
